[gd_scene load_steps=9 format=2]

[ext_resource path="res://interface/UIInventory.tscn" type="PackedScene" id=1]
[ext_resource path="res://PlayerCharacter.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://interface/UISavePanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://interface/UIInfoDisplay.tscn" type="PackedScene" id=5]
[ext_resource path="res://sky/BackgroundBlueSky.tscn" type="PackedScene" id=6]
[ext_resource path="res://tileset/tileset_floating_dungeon.tres" type="TileSet" id=7]
[ext_resource path="res://tileset/tileset_inivisible_walls.tres" type="TileSet" id=8]

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="PlayerCharacter" parent="." instance=ExtResource( 2 )]
position = Vector2( 59, 410 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="UIInventory" parent="UI" instance=ExtResource( 1 )]
margin_left = 992.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -24.0

[node name="UIInfoDisplay" parent="UI" instance=ExtResource( 5 )]
margin_left = 32.0
margin_top = 32.0
margin_right = 452.0
margin_bottom = 324.0

[node name="UISavePanel" parent="UI" instance=ExtResource( 4 )]
margin_left = 32.0
margin_top = -112.0
margin_right = 452.0
margin_bottom = -24.0

[node name="BackgroundBlueSky" parent="." instance=ExtResource( 6 )]

[node name="Level" type="Node2D" parent="."]

[node name="Bridges" type="TileMap" parent="Level"]
z_index = -10
tile_set = ExtResource( 7 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( 196613, 5, 2, 196614, 5, 2, 196615, 5, 2, 196616, 5, 2, 196617, 5, 2, 196618, 5, 2, 262155, 5, 0, 327691, 5, 0, 327692, 5, 4, 393216, 5, 4, 393228, 5, 4, 458752, 5, 4, 458764, 5, 4, 524288, 6, 0, 524300, 5, 4, 589824, 5, 4, 589836, 5, 4, 655360, 5, 4, 720896, 5, 4, 786432, 5, 4, 851968, 5, 4, 851980, 5, 4, 917504, 5, 4, 917516, 6, 0, 983052, 5, 4, 1048588, 5, 4, 1114117, 5, 2, 1114118, 5, 2, 1114119, 5, 2, 1114120, 5, 2, 1114121, 5, 2, 1114122, 5, 2, 1114123, 5, 2, 1114124, 5, 5 )

[node name="Floor" type="TileMap" parent="Level"]
position = Vector2( 0, -1 )
z_index = -10
tile_set = ExtResource( 7 )
cell_size = Vector2( 128, 128 )
cell_quadrant_size = 64
cell_clip_uv = true
collision_layer = 2
collision_mask = 15
format = 1
tile_data = PoolIntArray( 65533, 3, 0, 65534, 3, 65536, 65535, 3, 65536, 0, 3, 65536, 1, 3, 65536, 2, 3, 65536, 3, 3, 65536, 4, 3, 65536, 5, 3, 2, 131069, 3, 65536, 131070, 3, 131072, 131071, 3, 65536, 65536, 3, 131074, 65537, 3, 65538, 65538, 3, 65538, 65539, 3, 196608, 65540, 3, 65538, 65541, 3, 65536, 196605, 3, 65536, 196606, 3, 131074, 196607, 3, 131072, 131072, 3, 196610, 131073, 3, 65538, 131074, 3, 65537, 131075, 3, 65536, 131076, 3, 65538, 131077, 3, 65536, 131082, 3, 0, 131083, 3, 65536, 131084, 3, 65536, 131085, 3, 65536, 131086, 3, 65536, 131087, 3, 2, 262141, 3, 65536, 262142, 3, 131072, 262143, 3, 65536, 196608, 3, 65538, 196609, 3, 131072, 196610, 3, 196610, 196611, 3, 196608, 196612, 3, 196610, 196613, 3, 65536, 196618, 3, 65536, 196619, 3, 196609, 196620, 3, 65536, 196621, 3, 65536, 196622, 3, 131072, 196623, 3, 65536, 327677, 3, 65536, 327678, 3, 196609, 327679, 3, 131072, 262144, 3, 131073, 262145, 3, 196608, 262146, 3, 196609, 262147, 3, 65536, 262148, 3, 131072, 262149, 3, 65536, 262154, 3, 65536, 262155, 3, 131072, 262156, 3, 196609, 262157, 3, 65536, 262158, 3, 196612, 262159, 3, 65541, 393213, 3, 262147, 393214, 3, 65536, 393215, 3, 131074, 327680, 3, 65536, 327681, 3, 196609, 327682, 3, 196609, 327683, 3, 65536, 327684, 3, 131075, 327685, 3, 262149, 327690, 3, 65539, 327691, 3, 262145, 327693, 3, 65541, 458750, 3, 65536, 458751, 3, 131074, 393216, 3, 65538, 393217, 3, 131074, 393218, 3, 65536, 393219, 3, 262149, 524286, 3, 262147, 524287, 3, 131076, 458753, 3, 131075, 458754, 3, 262149, 589833, 3, 0, 589834, 3, 65536, 589835, 3, 65536, 589836, 3, 65536, 589837, 3, 65536, 589838, 3, 2, 655369, 3, 65536, 655370, 3, 196610, 655371, 3, 196608, 655372, 3, 131074, 655373, 3, 196609, 655374, 3, 65536, 720905, 3, 65539, 720906, 3, 65536, 720907, 3, 131072, 720908, 3, 65538, 720909, 3, 65536, 720910, 3, 65536, 786442, 3, 65536, 786443, 3, 196608, 786444, 3, 196608, 786445, 3, 196609, 786446, 3, 65536, 851978, 3, 65539, 851979, 3, 196612, 851981, 3, 262145, 851982, 3, 262149, 983036, 3, 0, 983037, 3, 65536, 983038, 3, 65536, 983039, 3, 65536, 917504, 3, 65536, 917505, 3, 65536, 917506, 3, 65536, 917507, 3, 65536, 917508, 3, 65536, 917509, 3, 2, 1048572, 3, 65536, 1048573, 3, 196609, 1048574, 3, 131074, 1048575, 3, 131074, 983040, 3, 65538, 983041, 3, 131072, 983042, 3, 65536, 983043, 3, 131072, 983044, 3, 196610, 983045, 3, 65536, 1114108, 3, 65536, 1114109, 3, 65538, 1114110, 3, 65538, 1114111, 3, 65538, 1048576, 3, 196610, 1048577, 3, 65536, 1048578, 3, 65538, 1048579, 3, 65536, 1048580, 3, 65536, 1048581, 3, 65536, 1179644, 3, 65536, 1179645, 3, 196610, 1179646, 3, 131072, 1179647, 3, 196609, 1114112, 3, 196610, 1114113, 3, 196608, 1114114, 3, 65538, 1114115, 3, 65538, 1114116, 3, 65536, 1114117, 3, 65536, 1245180, 3, 65536, 1245181, 3, 196608, 1245182, 3, 65536, 1245183, 3, 65540, 1179648, 3, 131075, 1179649, 3, 65536, 1179650, 3, 65537, 1179651, 3, 196609, 1179652, 3, 131073, 1179653, 3, 65536, 1310716, 3, 65536, 1310717, 3, 65538, 1310718, 3, 65536, 1245185, 3, 65536, 1245186, 3, 65536, 1245187, 3, 65536, 1245188, 3, 196608, 1245189, 3, 65536, 1376252, 3, 65539, 1376253, 3, 262145, 1376254, 3, 262149, 1310721, 3, 65539, 1310722, 3, 65540, 1310723, 3, 262145, 1310724, 3, 196612, 1310725, 3, 262149 )

[node name="Details" type="TileMap" parent="Level"]
position = Vector2( 0, -1 )
z_index = -10
tile_set = ExtResource( 7 )
cell_size = Vector2( 128, 128 )
cell_quadrant_size = 64
cell_clip_uv = true
collision_layer = 2
collision_mask = 15
format = 1

[node name="Walls" type="TileMap" parent="Level"]
z_index = -5
tile_set = ExtResource( 7 )
cell_size = Vector2( 128, 128 )
cell_quadrant_size = 64
cell_tile_origin = 2
cell_y_sort = true
cell_clip_uv = true
collision_layer = 16
collision_mask = 0
format = 1
tile_data = PoolIntArray( 65533, 0, 0, 65534, 0, 1, 65535, 0, 1, 0, 0, 1, 1, 0, 1, 2, 0, 2, 131069, 0, 65536, 131070, 0, 3, 131071, 0, 131073, 65536, 0, 131073, 65537, 0, 131073, 65538, 0, 131074, 196605, 0, 65536, 196606, 0, 65538, 262141, 0, 131072, 262142, 0, 131074 )

[node name="Limits" type="TileMap" parent="Level"]
visible = false
tile_set = ExtResource( 8 )
cell_size = Vector2( 128, 128 )
collision_mask = 0
format = 1
tile_data = PoolIntArray( -4, 1, 0, -3, 1, 0, -2, 1, 0, -1, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, 65532, 1, 0, 6, 1, 0, 131068, 1, 0, 65542, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 196604, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131088, 1, 0, 262140, 1, 0, 196624, 1, 0, 327676, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262158, 0, 0, 262159, 0, 0, 262160, 1, 0, 393212, 1, 0, 393213, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 1, 0, 327689, 1, 0, 327690, 0, 0, 327691, 0, 0, 327693, 0, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 458748, 1, 0, 458749, 1, 0, 393219, 0, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393229, 1, 0, 393230, 1, 0, 524285, 1, 0, 524286, 0, 0, 524287, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 1, 0, 458756, 1, 0, 458763, 1, 0, 458765, 1, 0, 589821, 1, 0, 589822, 1, 0, 589823, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 655359, 1, 0, 589825, 1, 0, 589832, 1, 0, 589839, 1, 0, 720895, 1, 0, 655361, 1, 0, 655368, 1, 0, 655375, 1, 0, 786431, 1, 0, 720897, 1, 0, 720904, 1, 0, 720905, 0, 0, 720911, 1, 0, 851967, 1, 0, 786433, 1, 0, 786440, 1, 0, 786441, 1, 0, 786447, 1, 0, 917499, 1, 0, 917500, 1, 0, 917501, 1, 0, 917502, 1, 0, 917503, 1, 0, 851969, 1, 0, 851970, 1, 0, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851977, 1, 0, 851978, 0, 0, 851979, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 1, 0, 983035, 1, 0, 917510, 1, 0, 917513, 1, 0, 917514, 1, 0, 917515, 1, 0, 917517, 1, 0, 917518, 1, 0, 917519, 1, 0, 1048571, 1, 0, 983046, 1, 0, 983051, 1, 0, 983053, 1, 0, 1114107, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048589, 1, 0, 1179643, 1, 0, 1114125, 1, 0, 1245179, 1, 0, 1245183, 0, 0, 1179648, 0, 0, 1179654, 1, 0, 1179655, 1, 0, 1179656, 1, 0, 1179657, 1, 0, 1179658, 1, 0, 1179659, 1, 0, 1179660, 1, 0, 1179661, 1, 0, 1310715, 1, 0, 1310719, 1, 0, 1245184, 1, 0, 1245190, 1, 0, 1376251, 1, 0, 1376252, 0, 0, 1376253, 0, 0, 1376254, 0, 0, 1376255, 1, 0, 1310720, 1, 0, 1310721, 0, 0, 1310722, 0, 0, 1310723, 0, 0, 1310724, 0, 0, 1310725, 0, 0, 1310726, 1, 0, 1441787, 1, 0, 1441788, 1, 0, 1441789, 1, 0, 1441790, 1, 0, 1441791, 1, 0, 1376256, 1, 0, 1376257, 1, 0, 1376258, 1, 0, 1376259, 1, 0, 1376260, 1, 0, 1376261, 1, 0, 1376262, 1, 0 )
